Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-35121

QNX: QtMultimedia video player crashes when used without root window

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • 5.2.0
    • 5.2.0 RC1
    • Multimedia
    • None
    • 94c17dce04c7726afbdd6ac67c569eedc629a81a

    Description

      When initializing a video player and not using a root window (as on plain QNX, not BB10), qtmultimedia crashes in QQnxNativeInterface::nativeResourceForWindow(), which assumes that a root window always exists.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            frank.osterfeld Frank Osterfeld
            frank.osterfeld Frank Osterfeld
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes